# SongHelper

./: .gitignore  README.md  pyproject.toml
docs/: CAPABILITIES.md  MERGED_MUSIC_AGENT_WORKSPACE.md  MUSIC_CREATION_SKILL.md  PROJECT_POSITIONING.md  TASK_EXAMPLES.md  WORKFLOWS.md  工程能力手册.md
docs/skills/主旋律转写/: SKILL.md
docs/skills/人声与Stem处理/: SKILL.md
docs/skills/创作策划与风格拆解/: SKILL.md
docs/skills/歌曲分析/: SKILL.md
docs/skills/音频整理与Demo处理/: SKILL.md
src/songhelper/: __init__.py  audio_analysis.py  audio_probe.py  capabilities.py  cli.py  ffmpeg_tools.py  lrc_tools.py  melody_cleanup.py  midi_tools.py  music_theory.py  project.py  rough_separation.py  score_render.py  transcription.py  workflows.py
src/songhelper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/songhelper/melody_factory/: AIAGENT_GUIDE.md  ARCHITECTURE.md  README.md  SKILL.md  __init__.py  abc_converter.py  audio_renderer.py  domain.py  midi_exporter.py  musicxml_exporter.py  preview_manifest.py  schema.py  score_renderer.py  session_store.py  validator.py  workflow.py
src/songhelper/melody_factory/prompts/: critique_hooks.md  draft_from_seed.md  draft_variants.md  refine_hook.md  seed_de_reference.md  seed_dialogue.md  seed_multi_source.md  seed_single_source.md
src/songhelper/melody_factory/schemas/: melody_seed_card.schema.json  melody_spec.schema.json
tests/: test_ffmpeg_tools.py  test_lrc_tools.py  test_melody_cleanup.py  test_melody_factory.py  test_midi_tools.py  test_music_theory.py  test_rough_separation.py  test_score_render.py  test_songhelper.py
