[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "songhelper"
version = "0.1.0"
description = "AI-assisted songwriting and audio workflow helper"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenCode Agent" }]
dependencies = []

[project.scripts]
songhelper = "songhelper.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
